<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:inputType="text"
        android:hint="@string/name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_last"
        android:inputType="text"
        android:hint="@string/last"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_age"
        android:inputType="number"
        android:hint="@string/age"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_type"
        android:inputType="number"
        android:hint="@string/type"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nick_name"
        android:inputType="text"
        android:hint="@string/nick"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_speed"
        android:inputType="number"
        android:hint="@string/speed"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="@dimen/whidth_button"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"
            android:background="@color/colorPrimary"
            android:textColor="#ffff"
            />
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="@dimen/whidth_button"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"
            android:background="@color/colorAccent"
            android:textColor="#ffff"
            />
    </LinearLayout>
</LinearLayout>